--- a/sourceCode/HelloWorld/HelloWorld/Views/Angular/Index.cshtml
+++ b/sourceCode/HelloWorld/HelloWorld/Views/Angular/Index.cshtml
@@ -12,22 +12,21 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/helloWorld.css" rel="stylesheet" />
 </head>
-<body class="container" ng-app="helloApp">
-    <div ng-controller="helloController" ng-cloak>
+<body class="container" ng-app>
+    <div>
         <label>firstName:</label>
         <input type="text" ng-model="firstName" />
 
         <label>lastname:</label>
         <input type="text" ng-model="lastName" />
-        
-        <h2 ng-show="showMessage()">Hello, {{ fullName() }}!</h2>
+
+        <h2 ng-show="firstName || lastName">Hello, {{firstName}} {{lastName}}!</h2>
     </div>
+
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="~/Scripts/underscore.js"></script>
     <script src="~/Scripts/bootstrap.js"></script>
     <script src="~/Scripts/angular.js"></script>
 
-    <script src="~/app/main.js"></script>
-    <script src="~/app/controllers/helloController.js"></script>
 </body>
 </html>
