--- a/sourceCode/HelloWorld/HelloWorld/Views/Angular/Index.cshtml
+++ b/sourceCode/HelloWorld/HelloWorld/Views/Angular/Index.cshtml
@@ -12,15 +12,9 @@
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
     <link href="~/Content/helloWorld.css" rel="stylesheet" />
 </head>
-<body class="container" ng-app>
+<body class="container">
     <div>
-        <label>firstName:</label>
-        <input type="text" ng-model="firstName" />
-
-        <label>lastname:</label>
-        <input type="text" ng-model="lastName" />
-
-        <h2 ng-show="firstName || lastName">Hello, {{firstName}} {{lastName}}!</h2>
+        
     </div>
 
     <script src="~/Scripts/jquery-1.10.2.js"></script>
