Staging the demo

--- a/sourceCode/FlashCards/FlashCards/Views/Home/Index.cshtml
+++ b/sourceCode/FlashCards/FlashCards/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
             </div>
         </div>
 
-        <div class="container app-container" ng-view>
+        <div class="container app-container">
         </div>
 
         @Scripts.Render("~/Scripts/angular")
