--- a/sourceCode/FlashCards/FlashCards/App/views/cards.html
+++ b/sourceCode/FlashCards/FlashCards/App/views/cards.html
@@ -1,40 +1,36 @@
 ﻿<div class="col-xs-offset-1 col-xs-10">
 
-    <div ng-if="selected.found">
+    <div>
         <div class="row">
-            <button class="previous col-xs-4 col-sm-2 col-lg-1 btn btn-default"
-                    ng-class="{'hidden': !selected.hasPrevious()}"
-                    ng-click="previous()">
+            <button class="previous col-xs-4 col-sm-2 col-lg-1 btn btn-default">
                 Previous
             </button>
-            <button class="next col-xs-4 col-xs-offset-4 col-sm-2 col-sm-offset-8 col-lg-1 col-lg-offset-10 btn btn-default"
-                    ng-class="{'hidden': !selected.hasNext()}"
-                    ng-click="next()">
+            <button class="next col-xs-4 col-xs-offset-4 col-sm-2 col-sm-offset-8 col-lg-1 col-lg-offset-10 btn btn-default">
                 Next
             </button>
         </div>
 
         <div class="row status">
-            <span>{{ selected.selectedOf() }}</span>
-            <span class="selectedName">{{ selected.name }}</span>
+            <span></span>
+            <span class="selectedName"></span>
         </div>
 
         <div class="row">
-            <div class="card" ng-click="flip()">
+            <div class="card" >
                 <div class="col-xs-12 well front face ">
-                    <h4>{{ selected.card.frontHeading }}</h4>
-                    <p>{{ selected.card.front }}</p>
+                    <h4></h4>
+                    <p></p>
                 </div>
                 <div class="col-xs-12 well back face">
-                    <h4>{{ selected.card.backHeading }}</h4>
-                    <p>{{ selected.card.back }}</p>
+                    <h4></h4>
+                    <p></p>
                 </div>
             </div>
         </div>
 
     </div>
 
-    <div ng-if="!selected.found">
+    <div>
         <h2>Card not found.</h2>
     </div>
 
