--- a/sourceCode/FlashCards/FlashCards/App/views/catalog.html
+++ b/sourceCode/FlashCards/FlashCards/App/views/catalog.html
@@ -1,8 +1,8 @@
 ﻿<section>
    <ul class="list-inline">
-      <li class="col-xs-12 col-sm-6 col-md-3" ng-repeat="catalogName in catalogNames"  ng-click="navigate(catalogName)">
+      <li class="col-xs-12 col-sm-6 col-md-3">
          <div class="well">
-            <p class="lead">{{ catalogName }}</p>
+            <p class="lead">Cards Go Here</p>
          </div>
       </li>
    </ul>
